  * General Guard method improvements plus additional ThrowWhenXXX() type methods
  * Added EnrichedBinaryReader, EnrichedBinaryWriter and associated value reader / writer
  * Renamed AsListAsync() back to ToListAsync() and added overloads of SelectAsReadOnlyCollectionAsync() and SelectAsReadOnlyListAsync()
    for both IEnumerable and IAsyncEnumerable.
    EF's ToListAsync() works on IQueryable
  * Moved some extension methods from EnumerableExtensions to AsyncEnumerableExtensions.

AllOverIt.Assertion
  * Removed methods that asserted an enumerable was a concrete collection type and instead updated .NET Core 3.1
    versions to check for different collection types before falling back to the default Any() Linq method.

AllOverIt.Aws.AppSync.Client
  * Renamed AppSyncCognitoAuthorization to AppSyncAuthorization and deleted AppSyncLambdaAuthorization as it also contains
    an 'authorization' header.

AllOverIt.Pagination
  * New package to provide keyset based pagination for any IQueryable, including EF queries

AllOverIt.EntityFrameworkCore.Pagination
  * New package to provide keyset based pagination extensions for any EF query

AllOverIt.ReactiveUI
  * New package                                                     - TESTS PENDING ******************
  * Includes ActivatableViewModel, CountdownTimer


02 Jul 2022
Version 5.9.2
======================================================================================================================
AllOverIt.Aws.AppSync.Client
  * Updated the subscription client so an initial connection established at the time of making a subscription will
    connect using the provided authorization, or the default authorization if one isn't provided.


27 Jun 2022
Version 5.9.1
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync
  * Added missing AuthLambdaDirective support to queries and mutations06 Jun 2022
  
  
06 Jun 2022
Version 5.9.0